--- a/CompanyDatabaseProcessing/Web.config
+++ b/CompanyDatabaseProcessing/Web.config
@@ -8,11 +8,16 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="TableContext" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename='|DataDirectory|\CompanyDatabase.mdf';Integrated Security=True"
  providerName="System.Data.SqlClient"/>
-  </connectionStrings>
+  </connectionStrings>-->
   
+  <connectionStrings>
+    <add name="ConnectonString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename='|DataDirectory|\CompanyDatabase.mdf';Integrated Security=True"
+ providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+    
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
